--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body{
     background-color: hsl(212, 45%, 89%);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Outfit", sans-serif;
 }
 
 .divprojet{
