--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,38 @@
 body{
     background-color: hsl(212, 45%, 89%);
     font-family: "Outfit", sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .divprojet{
     width: 15%;
     height: 25%;
     background-color: hsl(0, 0%, 100%);
-    margin: 14% auto;
     text-align: center;
-    border-radius: 10px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    padding: 1em;
+    margin: 10%;
 }
 
 .qrcode{
-    width: 90%;
-    margin: 2% 2% 0 2%;
+    width: 100%;
+    height: 100%;
     border-radius: 10px;
 }
 
 .titre{
     color: hsl(218, 44%, 22%);
     font-weight: 700;
+    font-size: 22px;
 }
 
 .description{
     color: hsl(220, 15%, 55%);
     font-weight: 400;
-}
-
-p{
-    font-size: 15px;
+    font-size: 16px;
 }
